--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,8 +1,8 @@
 <html>
--    <head>
--        <title>Article One | Sahil Shah</title>
--    </head>
--    <body>
+    <head>
+        <title>Article One | Sahil Shah</title>
+    </head>
+    <body>
 -    <div>
 -        <a href="/">Home</a>
 -    </div>
@@ -24,6 +24,8 @@
 -        <p>
 -            This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article.
 -        </p>
--    </div>
--    </body>
--</html>
+    </div>
+</body>
+    
+ 
+</html>
