--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,27 +3,27 @@
         <title>Article One | Sahil Shah</title>
     </head>
     <body>
--    <div>
--        <a href="/">Home</a>
--    </div>
--    <hr/>
--    <h3>Article One</h3>
--    <div>
--        5 Sep,2016
--    </div>
--    <div>
--        <p>
--            This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. 
--        </p>
--        <p>
--            This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. 
--        </p>
--        <p>
--            This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. 
--        </p>
--        <p>
--            This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article.
--        </p>
+    <div>
+        <a href="/">Home</a>
+    </div>
+    <hr/>
+    <h3>Article One</h3>
+    <div>
+        5 Sep,2016
+    </div>
+    <div>
+        <p>
+            This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. 
+        </p>
+        <p>
+            This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. 
+        </p>
+        <p>
+            This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. 
+        </p>
+        <p>
+            This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article. This Is The Content For My First Article.
+        </p>
     </div>
 </body>
     
