[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Article One | Sahil Shah</title>
+        <meta name="viewport" conetnt="width=device-width, initial-scale=1"/>
     </head>
     <body>
     <div>
