--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,9 +3,20 @@
         <title>Article One | Sahil Shah</title>
         <meta name="viewport" conetnt="width=device-width, initial-scale=1"/>
         <link href="ui/style.css" rel="stylesheet"/>
+        <style>
+            .container {
+                max-width:800px;
+                margin:0 auto;
+                color: #4a4a4a;
+                font-family: sans-serif;
+                padding-top:60px;
+                padding-left:20px;
+                padding-right:20px;
+            }
+        </style>
     </head>
     <body>
-    <div>
+    <div class="container">
         <a href="/">Home</a>
     </div>
     <hr/>
