[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,13 +4,26 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class="conatiner">
         <div class="center">
-            <img id='madi' src="/ui/madi.png" class="img-medium"/>
+            <img id='madi' src="http://timesofindia.indiatimes.com/thumb/msid-50160474,width-400,resizemode-4/50160474.jpg" class="img-medium"/>
         </div>
+        <hr/>
         <br>
-        <div id='main-text' class="center text-big bold">
-            Hi! I am your webapp.
+        <h2>Personal</h2>
+        <div>
+            Hi, My Name Is Sahil Shah
+         </div>
+         <hr/>
+         <br>
+            <h2>Professional</h2>
+            <div>
+                I Work At Payyade Sports Club
+            </div>
+            <hr/>
+            <div class="footer"></div>
         </div>
+        
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
