[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -18,8 +18,7 @@
          <br>
             <h2>Professional</h2>
             <div>
-                I Work At Payyade Sports Club
-            </div>
+                I Am A Student At Usha Pravin Gandhi College Of Management
             <hr/>
             <div class="footer"></div>
         </div>
