[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -20,7 +20,9 @@
             <div>
                 I Am A Student At Usha Pravin Gandhi College Of Management
             <hr/>
-            <div class="footer"></div>
+            <div class="footer">
+                This Button <button id="counter"> Click Here!</button>Has Been Clicked <span id="count">0</span> Times!
+            </div>
         </div>
         
         <script type="text/javascript" src="/ui/main.js">
