[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -19,9 +19,11 @@
             <h2>Professional</h2>
             <div>
                 I Am A Student At Usha Pravin Gandhi College Of Management
+                </div>
+                
             <hr/>
             <div class="footer">
-                This Button <button id="counter"> Click Here!</button>Has Been Clicked <span id="count">0</span> Times!
+                 This Button <button id="counter">Click Here!</button>Has Been Clicked<span id="count">0</span> Times!
             </div>
         </div>
         
